fixed a bug with the todos not showing up for proj three. Had to trim the variable on click

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@ body {
 	color: #f1f0ea;
 }
 
+body::-webkit-scrollbar {
+	display: none;
+}
+
+body {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
 #container {
 	display: flex;
 	width: 100%;
